[NIFI-3458] increase processor preview hieght to avoid bottom border being cut off

--- a/nifi-nar-bundles/nifi-framework-bundle/nifi-framework/nifi-web/nifi-web-ui/src/main/webapp/css/dialog.css
+++ b/nifi-nar-bundles/nifi-framework-bundle/nifi-framework/nifi-web/nifi-web-ui/src/main/webapp/css/dialog.css
@@ -34,7 +34,7 @@
 
 #fill-color-processor-preview {
     width: 173px;
-    height: 65px;
+    height: 66px;
     border-width: 1px;
     border-style: solid;
     box-shadow: 0 1px 4px rgba(0, 0, 0, 0.25);
